# rd_rust_homeworks

./: README.md
lesson_1/src/: main.rs
lesson_11/: Cargo.toml  README.md
lesson_11/src/: lib.rs
lesson_13/: Cargo.toml
lesson_13/src/: lib.rs
lesson_15/: Cargo.toml
lesson_15/src/: lib.rs
lesson_16/: Cargo.toml  README.md
lesson_16/src/: client.rs  db.rs  lib.rs  server.rs
lesson_17/: Cargo.toml  README.md  docker-compose.yml
lesson_17/cmd/server/: Cargo.toml
lesson_17/cmd/server/src/: main.rs
lesson_17/services/messages/: Cargo.toml
lesson_17/services/messages/src/: handler.rs  model.rs  repository.rs
lesson_17/templates/: Cargo.toml
lesson_17/templates/src/: index.rs  lib.rs  message_form.rs
lesson_18/: Cargo.toml  README.md
lesson_18/cmd/server/: Cargo.toml
lesson_18/cmd/server/src/: db.rs  main.rs
lesson_18/services/messages/: Cargo.toml
lesson_18/services/messages/src/: handler.rs  lib.rs  repository.rs  service.rs
lesson_18/shared/: Cargo.toml
lesson_18/shared/src/: app_metrics.rs  lib.rs  model.rs
lesson_18/templates/: Cargo.toml
lesson_18/templates/src/: index.rs  lib.rs  message_form.rs  message_table.rs
lesson_2/: Cargo.toml
lesson_2/src/: main.rs
lesson_3/: Cargo.toml
lesson_3/src/: main.rs
lesson_4/: Cargo.toml  file.csv
lesson_4/src/: main.rs
lesson_5/: Cargo.toml
lesson_5/src/: main.rs
lesson_9/: Cargo.toml
lesson_9/src/: main.rs
