[workspace]
members = ["cmd/server", "services/messages", "shared", "templates"]
resolver = "2"

[workspace.dependencies]
axum = { version = "0.8.3" }
tokio = { version = "1.44.1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "postgres", "json"] }
prometheus = "0.14.0"
async-trait = "0.1"
