[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
messages = { path = "../../services/messages" }
templates = { path = "../../templates" }
shared = { path = "../../shared" }
tokio = { version = "1.44.1", features = ["full"] }
anyhow = "1.0.97"
log = "0.4.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "postgres"] }
axum = "0.8.3"
base64 = "0.22.1"
maud = { version = "*", features = ["axum"] }
prometheus = "0.14.0"
