[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
messages = { path = "../../services/messages" }
templates = { path = "../../templates" }
shared = { path = "../../shared", features = ["axum_integration"] }
tokio = { workspace = true }
anyhow = "1.0.97"
log = "0.4.27"
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
axum = { workspace = true }
base64 = "0.22.1"
maud = { version = "*", features = ["axum"] }
prometheus = { workspace = true }
