[package]
name = "messages"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../../shared" }
tokio = { workspace = true }
anyhow = "1.0.97"
log = "0.4.27"
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sqlx = { workspace = true, features = ["runtime-tokio", "postgres"] }
axum = { workspace = true }
base64 = "0.22.1"
async-trait = "0.1.88"
